--- a/templates/base.html
+++ b/templates/base.html
@@ -8,13 +8,25 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-  <title>My WeatherApp</title>
+  <title>My Weather App</title>
+  <style>
+    .good{background-color: #00e400;}
+    .moderate{background-color: #ff0;}
+    .usg{background-color: #ff7e00;}
+    .unhealthy{background-color: red;}
+    .veyunhealthy{background-color:#8f3f97;}
+    .hazardous{background-color:#7e0023;}
+    h1, .jumbotron h1{
+      font-weight: 800;
+
+    }
+  </style>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'weather' %}">WeatherApp</a>
+      <a class="navbar-brand" href="{% url 'weather' %}">My Weather App</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -22,7 +34,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'about' %}">About</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'about' %}">About Me</a>
           </li>
         </ul>
         <form class="d-flex">
@@ -32,6 +44,14 @@
       </div>
     </div>
   </nav>
+  
+  <div class="container">
+    {% block content %}
+
+    {% endblock content %}
+  </div>
+
+  
   <!-- <h1>Welcome to my WeatherApp</h1> -->
   <!-- Optional JavaScript; choose one of the two! -->
   <!-- Option 1: Bootstrap Bundle with Popper -->
@@ -43,6 +63,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
     -->
+    
 </body>
 
 </html>
