--- a/templates/base.html
+++ b/templates/base.html
@@ -10,15 +10,54 @@
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <title>My Weather App</title>
   <style>
-    .good{background-color: #00e400;}
-    .moderate{background-color: #ff0;}
-    .usg{background-color: #ff7e00;}
-    .unhealthy{background-color: red;}
-    .veyunhealthy{background-color:#8f3f97;}
-    .hazardous{background-color:#7e0023;}
-    h1, .jumbotron h1{
-      font-weight: 800;
+    body {
+      background-image:
+        url("https://wallpapercave.com/wp/Dq6o3uI.jpg");
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
 
+    .good {
+      background-color: #076b0760;
+    }
+
+    .moderate {
+      background-color: rgba(229, 236, 125, 0.541);
+    }
+
+    .usg {
+      background-color: #e6790da6;
+    }
+
+    .unhealthy {
+      background-color: rgba(216, 14, 14, 0.445);
+    }
+
+    .veryunhealthy {
+      background-color: #903f9781;
+    }
+
+    .hazardous {
+      background-color: #5e031c8e;
+    }
+
+    h1,
+    p {
+      color: rgba(211, 230, 212, 0.938);
+    }
+
+    a {
+      text-decoration: none;
+      color: rgb(118, 198, 230);
+    }
+
+    h1,
+    .jumbotron h1 {
+      font-weight: 800;
+    }
+
+    footer {
+      margin-top: 120px;
     }
   </style>
 </head>
@@ -37,21 +76,36 @@
             <a class="nav-link active" aria-current="page" href="{% url 'about' %}">About Me</a>
           </li>
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+        <form class="d-flex" action="{% url 'weather' %}" method="POST">
+          {% csrf_token %}
+          <input class="form-control me-2" type="search" placeholder="enter your zipcode" aria-label="Search" name="zipcode">
+          <button class="btn btn-outline-success" type="submit">Lookup</button>
         </form>
       </div>
     </div>
   </nav>
-  
+
   <div class="container">
     {% block content %}
 
     {% endblock content %}
   </div>
-
-  
+  <footer>
+    <div class="navbar-dark bg-dark footer">
+      <p style="text-align: center; padding-top: 14px;">Contact Mohamed Eldimardash through</p>
+      <ul class="nav justify-content-center">
+        <li class="nav-item">
+          <a class="nav-link active" href="https://www.facebook.com/MOHAMED.ELDIMARDASH" target="_blank">FaceBook</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.linkedin.com/in/mohamed-eldimardash-0023a3b5/" target="_blank">LinkedIn</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/MMGGYY66" target="_blank">GitHub</a>
+        </li>
+      </ul>
+    </div>
+  </footer>
   <!-- <h1>Welcome to my WeatherApp</h1> -->
   <!-- Optional JavaScript; choose one of the two! -->
   <!-- Option 1: Bootstrap Bundle with Popper -->
@@ -63,7 +117,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
     -->
-    
+
 </body>
 
 </html>
