--- a/templates/weather.html
+++ b/templates/weather.html
@@ -3,15 +3,20 @@
 {% block content %}
 <br>
 <h1>Welcome to My Weather App</h1>
-<p>These data are retrieved from
-    <a href="https://www.airnow.gov/?city=Oklahoma%20City&state=OK&country=USA" target="_blank">AirNow.org</a>.
+<p style="font-size: 22px; width: 410px; padding-left: 12px;margin-left: 34px;border-radius: 20px; background-color: 
+rgba(8, 77, 8, 0.541); color: rgbargb(118, 198, 230);">These data are retrieved from
+    <a href="https://www.airnow.gov/?city=Oklahoma%20City&state=OK&country=USA" target="_blank">AirNow.org</a>
 </p>
-<br> <br>
+<br> 
+{% if zipcode %}
+    {{ zipcode}}
+{% endif %}
+
 {%if api %}
 {% if api == "Error ..." %}
 There was an error. Please try again.
 {% else %}
-<div class="jumbotron {{ category_color }}" style="padding: 24px 0 0 16px; color: #fff; border-radius: 20px;">
+<div class="jumbotron {{ category_color }}" style="padding: 20px 0 0 16px; color: #fff; border-radius: 20px;">
     <h1 class="display-4">{{api.0.Category.Name}}</h1>
     <p class="lead" style="font-size: 24px;"><strong>Current {{api.0.ReportingArea}} Air Quality: {{api.0.AQI}}.</strong></p>
     <hr class="my-4">
