--- a/templates/base.html
+++ b/templates/base.html
@@ -101,7 +101,7 @@
           <a class="nav-link" href="https://www.linkedin.com/in/mohamed-eldimardash-0023a3b5/" target="_blank">LinkedIn</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://github.com/MMGGYY66" target="_blank">GitHub</a>
+          <a class="nav-link" href="https://github.com/MMGGYY66/myWeatherApp" target="_blank">GitHub</a>
         </li>
       </ul>
     </div>
